5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1593_2908.log
== TEST (2019-03-26 10:17:56) 
-- CODE:
a=float(input("variavel: "))
b=float(input("variavel: "))
c=float(input("variavel: "))
total=(a**2+b**2+c**2)/(a+b+c)
print(round,7(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,7(total))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:42) 
-- CODE:
a=int(input("variavel: "))
b=int(input("variavel: "))
c=int(input("variavel: "))
total=(a**2+b**2+c**2)/(a+b+c)
print(round,7(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,7(total))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:20:02) 
-- CODE:
a=int(input("variavel: "))
b=int(input("variavel: "))
c=int(input("variavel: "))
total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7)
-- ERROR:
File "XXXX", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:20:14) 
-- CODE:
a=int(input("variavel: "))
b=int(input("variavel: "))
c=int(input("variavel: "))
total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:20:29) 
-- CODE:
a=int(input("variavel: "))
b=int(input("variavel: "))
c=int(input("variavel: "))
total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.157957
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
